force-app/main/default/objects/Filter_Set__c/Filter_Set__c.object-meta.xml
<CustomObject>
    <description>Used with the Undergrad and Graduate Advisor Portal; this object stores the filters created by users.</description>
    <label>Filter Set</label>
    <nameField>
        <label>Filter Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>