force-app/main/default/objects/Filter_Set__c/fields/Is_Shared__c.field-meta.xml
<CustomField>
    <fullName>Is_Shared__c</fullName>
    <description>Is this filter set shared with anyone, or is it just used by its owner?</description>
    <formula>Usage_Count__c  &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this filter set shared with anyone, or is it just used by its owner?</inlineHelpText>
    <label>Is Shared</label>
    <type>Checkbox</type>
</CustomField>