force-app/main/default/objects/Filter_Set__c/fields/Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Usage_Count__c</fullName>
    <description>How many users have access to this filter set?</description>
    <inlineHelpText>How many users have access to this filter set?</inlineHelpText>
    <label>Usage Count</label>
    <summaryForeignKey>Filter_Set_User_Association__c.Filter_Set__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>