force-app/main/default/objects/Filter_Set__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The serialized JSON representing this filter set.</description>
    <inlineHelpText>The serialized JSON representing this filter set.</inlineHelpText>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>