force-app/main/default/objects/Filter_Set__c/recordTypes/Advisor_Portal.recordType-meta.xml
<RecordType>
    <fullName>Advisor_Portal</fullName>
    <active>true</active>
    <description>Filter Sets meant to be used in Advisor Portal</description>
    <label>Advisor Portal</label>
</RecordType>